<resources>
    <string name="app_name">One Touch Notes</string>

    <string name="error_creating_folder">Error creating folder</string>
    <string name="error_deleting_object">Error deleting object</string>
    <string name="error_internal_error">Internal error</string>
    <string name="error_invalid_name">Name not permitted</string>
    <string name="error_name_exists">Name already exists</string>
    <string name="error_pasting_object">Error pasting object</string>
    <string name="error_renaming_object">Error renaming object</string>
    <string name="error_saving_note">Error saving note</string>

    <string name="menu_about">About</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_cut">Cut</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_insert_date">Insert date</string>
    <string name="menu_insert_timestamp">Insert timestamp</string>
    <string name="menu_new_folder">New folder</string>
    <string name="menu_new_note">New note</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_save">Save</string>
    <string name="menu_settings">Settings</string>

    <string name="title_about">About</string>
    <string name="title_create_folder">Create folder</string>
    <string name="title_delete_confirm">Delete %s?</string>
    <string name="title_discard_modifications">Discard modifications?</string>
    <string name="title_new_name">New name</string>

    <string name="icon_th">&#xe800;</string>
    <string name="icon_ok">&#xe801;</string>
    <string name="icon_cancel">&#xe802;</string>
    <string name="icon_ok_circled">&#xe803;</string>
    <string name="icon_cancel_circled">&#xe804;</string>
    <string name="icon_plus">&#xe805;</string>
    <string name="icon_plus_circled">&#xe806;</string>
    <string name="icon_lock">&#xe807;</string>
    <string name="icon_lock_open">&#xe808;</string>
    <string name="icon_trash_empty">&#xe809;</string>
    <string name="icon_doc">&#xe80a;</string>
    <string name="icon_folder">&#xe80b;</string>
    <string name="icon_folder_open">&#xe80c;</string>
    <string name="icon_cog">&#xe80d;</string>
    <string name="icon_wrench">&#xe80e;</string>
    <string name="icon_folder_close_1">&#xe810;</string>
    <string name="icon_calendar">&#xe811;</string>
    <string name="icon_resize_full">&#xe812;</string>
    <string name="icon_resize_small">&#xe813;</string>
    <string name="icon_zoom_in">&#xe814;</string>
    <string name="icon_zoom_out">&#xe815;</string>
    <string name="icon_calendar_circled">&#xe816;</string>
    <string name="icon_folder_1">&#xe817;</string>
    <string name="icon_th_list_3">&#xe818;</string>
    <string name="icon_down_open">&#xe81a;</string>
    <string name="icon_left_open">&#xe81b;</string>
    <string name="icon_right_open">&#xe81c;</string>
    <string name="icon_up_open">&#xe81d;</string>
    <string name="icon_down_big">&#xe81e;</string>
    <string name="icon_left_big">&#xe81f;</string>
    <string name="icon_up_big">&#xe820;</string>
    <string name="icon_right_big">&#xe821;</string>
    <string name="icon_clock">&#xe822;</string>
    <string name="icon_list">&#xe824;</string>
    <string name="icon_emo_wink">&#xe825;</string>
    <string name="icon_book">&#xe826;</string>
    <string name="icon_check">&#xe827;</string>
    <string name="icon_minus">&#xe828;</string>
    <string name="icon_minus_circled">&#xe829;</string>
    <string name="icon_scissors">&#xe82a;</string>
    <string name="icon_emo_wink2">&#xe82b;</string>
    <string name="icon_trash_1">&#xe82c;</string>
    <string name="icon_emo_unhappy">&#xe82d;</string>
    <string name="icon_down_open_small">&#xe836;</string>
    <string name="icon_left_open_small">&#xe837;</string>
    <string name="icon_up_open_small">&#xe838;</string>
    <string name="icon_right_open_small">&#xe839;</string>
    <string name="icon_down_dir_1">&#xe83e;</string>
    <string name="icon_left_dir_1">&#xe83f;</string>
    <string name="icon_right_dir_1">&#xe840;</string>
    <string name="icon_up_dir_1">&#xe841;</string>
    <string name="icon_flow_cascade">&#xe84a;</string>
    <string name="icon_flow_line">&#xe84b;</string>
    <string name="icon_th_list_outline">&#xe84e;</string>
    <string name="icon_th_list">&#xe84f;</string>
    <string name="icon_ok_outline">&#xe850;</string>
    <string name="icon_ok_round">&#xe851;</string>
    <string name="icon_cancel_outline">&#xe852;</string>
    <string name="icon_cancel_round">&#xe853;</string>
    <string name="icon_plus_outline">&#xe856;</string>
    <string name="icon_plus_round">&#xe857;</string>
    <string name="icon_minus_outline">&#xe858;</string>
    <string name="icon_minus_round">&#xe859;</string>
    <string name="icon_doc_add">&#xe85e;</string>
    <string name="icon_doc_remove">&#xe85f;</string>
    <string name="icon_folder_add">&#xe860;</string>
    <string name="icon_folder_delete">&#xe861;</string>
    <string name="icon_doc_text_2">&#xe862;</string>
    <string name="icon_doc_2">&#xe863;</string>
    <string name="icon_trash_2">&#xe864;</string>
    <string name="icon_down">&#xe866;</string>
    <string name="icon_left">&#xe867;</string>
    <string name="icon_right">&#xe868;</string>
    <string name="icon_up">&#xe869;</string>
    <string name="icon_down_outline">&#xe86a;</string>
    <string name="icon_left_outline">&#xe86b;</string>
    <string name="icon_right_outline">&#xe86c;</string>
    <string name="icon_up_outline">&#xe86d;</string>
    <string name="icon_resize_full_quad">&#xe872;</string>
    <string name="icon_resize_small_quad">&#xe873;</string>
    <string name="icon_key">&#xe874;</string>
    <string name="icon_key_inv">&#xe875;</string>
    <string name="icon_grid">&#xe878;</string>
    <string name="icon_th_2">&#xe87a;</string>
    <string name="icon_th_list_2">&#xe87b;</string>
    <string name="icon_resize_full_bold">&#xe87e;</string>
    <string name="icon_resize_small_bold">&#xe87f;</string>
    <string name="icon_folder_open_1">&#xe883;</string>
    <string name="icon_download">&#xf02e;</string>
    <string name="icon_upload">&#xf02f;</string>
    <string name="icon_check_empty">&#xf096;</string>
    <string name="icon_docs">&#xf0c5;</string>
    <string name="icon_menu">&#xf0c9;</string>
    <string name="icon_list_bullet">&#xf0ca;</string>
    <string name="icon_table">&#xf0ce;</string>
    <string name="icon_sitemap">&#xf0e8;</string>
    <string name="icon_paste">&#xf0ea;</string>
    <string name="icon_doc_text">&#xf0f6;</string>
    <string name="icon_plus_squared">&#xf0fe;</string>
    <string name="icon_folder_empty">&#xf114;</string>
    <string name="icon_folder_open_empty">&#xf115;</string>
    <string name="icon_minus_squared">&#xf146;</string>
    <string name="icon_minus_squared_alt">&#xf147;</string>
    <string name="icon_doc_inv">&#xf15b;</string>
    <string name="icon_doc_text_inv">&#xf15c;</string>
    <string name="icon_plus_squared_alt">&#xf196;</string>
    <string name="icon_sliders">&#xf1de;</string>
    <string name="icon_trash">&#xf1f8;</string>
    <string name="icon_toggle_off">&#xf204;</string>
    <string name="icon_toggle_on">&#xf205;</string>
</resources>
