<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_new_folder"
        android:orderInCategory="100"
        android:title="@string/menu_new_folder" />

    <item
        android:id="@+id/action_new_note"
        android:orderInCategory="100"
        android:title="@string/menu_new_note" />

    <item
        android:id="@+id/action_rename"
        android:orderInCategory="100"
        android:title="@string/menu_rename" />

    <item
        android:id="@+id/action_cut"
        android:orderInCategory="100"
        android:title="@string/menu_cut" />

    <item
        android:id="@+id/action_paste"
        android:orderInCategory="100"
        android:title="@string/menu_paste" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/menu_delete" />

</menu>