<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.cimugbit.onetouchnotes.TreeViewActivity">

    <item
        android:id="@+id/action_new_note"
        android:orderInCategory="100"
        android:title="@string/menu_new_note" />

    <item
        android:id="@+id/action_new_folder"
        android:orderInCategory="100"
        android:title="@string/menu_new_folder" />

    <item
        android:id="@+id/action_paste"
        android:orderInCategory="100"
        android:title="@string/menu_paste"
        android:visible="false"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/menu_about" />

</menu>